--- a/package.json
+++ b/package.json
@@ -3,14 +3,22 @@
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
-      "ts-node": "3.3.0",
       "@types/node": "^8.0.29",
+      "ts-node": "3.3.0",
       "typescript": "3.3.3333"
    },
    "dependencies": {
-      "typeorm": "0.2.29",
+      "@types/cookie-parser": "^1.4.2",
+      "@types/express": "^4.17.11",
+      "@types/md5": "^2.2.1",
+      "arrify": "^2.0.1",
+      "cookie-parser": "^1.4.5",
+      "express": "^4.17.1",
+      "md5": "^2.3.0",
+      "nodemon": "^2.0.7",
+      "pg": "^8.4.0",
       "reflect-metadata": "^0.1.10",
-      "pg": "^8.4.0"
+      "typeorm": "0.2.29"
    },
    "scripts": {
       "start": "ts-node src/index.ts"
