--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
       "arrify": "^2.0.1",
       "cookie-parser": "^1.4.5",
       "express": "^4.17.1",
+      "html-pdf": "^2.2.0",
       "md5": "^2.3.0",
       "nodemon": "^2.0.7",
+      "pdf": "^0.1.0",
+      "pdfkit": "^0.11.0",
       "pg": "^8.4.0",
+      "phantom-html-to-pdf": "^0.6.1",
       "reflect-metadata": "^0.1.10",
+      "twitter_cldr": "^2.2.0",
       "typeorm": "0.2.29"
    },
    "scripts": {
