cleaing my pants

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
    "dependencies": {
       "@types/cookie-parser": "^1.4.2",
       "@types/express": "^4.17.11",
+      "@types/html-pdf": "^2.2.0",
       "@types/md5": "^2.2.1",
       "arrify": "^2.0.1",
       "cookie-parser": "^1.4.5",
@@ -17,12 +18,8 @@
       "html-pdf": "^2.2.0",
       "md5": "^2.3.0",
       "nodemon": "^2.0.7",
-      "pdf": "^0.1.0",
-      "pdfkit": "^0.11.0",
       "pg": "^8.4.0",
-      "phantom-html-to-pdf": "^0.6.1",
       "reflect-metadata": "^0.1.10",
-      "twitter_cldr": "^2.2.0",
       "typeorm": "0.2.29"
    },
    "scripts": {
