--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
       "arrify": "^2.0.1",
       "cookie-parser": "^1.4.5",
       "express": "^4.17.1",
+      "express-validator": "^6.9.2",
       "html-pdf": "^2.2.0",
       "md5": "^2.3.0",
       "nodemon": "^2.0.7",
