--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
       "@types/html-pdf": "^2.2.0",
       "@types/md5": "^2.2.1",
       "arrify": "^2.0.1",
+      "connect-pg-simple": "^6.2.1",
       "cookie-parser": "^1.4.5",
+      "dotenv": "^8.2.0",
       "express": "^4.17.1",
+      "express-session": "^1.17.1",
       "express-validator": "^6.9.2",
       "html-pdf": "^2.2.0",
       "md5": "^2.3.0",
       "nodemon": "^2.0.7",
       "pg": "^8.4.0",
+      "pg-promise": "^10.9.1",
       "reflect-metadata": "^0.1.10",
       "typeorm": "0.2.29"
    },
