--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
       "nodemon": "^2.0.7",
       "pg": "^8.4.0",
       "pg-promise": "^10.9.1",
+      "pug": "^3.0.0",
       "reflect-metadata": "^0.1.10",
       "typeorm": "0.2.29"
    },
